# lp-recuperacao-js-hs-compound

./: .gitignore  README.md  RECUP_LP_2025.md
backend/compound-api/: CHANGELOG.md  Dockerfile  README.md  compound-api.cabal
backend/compound-api/src/: Main.hs
frontend/: index.html  script.js
