cabal-version:       >=1.10
name:                compound-api
version:             0.1.0.0
synopsis:            compound-api executable
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable compound-api
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5,
      scotty,
      aeson,
      text,
      wai,
      warp,
      wai-extra,
      http-types,
      bytestring
  default-language:    Haskell2010
